--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,11 +19,75 @@ header {
   box-shadow: 0px 3px 6px #00000029;
   opacity: 1;
 
-  position: static;
-  top: 0;
-  height: 60px;
+  height: 110px;
 }
+@media only screen and (max-width: 599px) {
+  header {
+    height: 75px;
+  }
+}
+.container-header {
+  height: 100%;
+  display: flex !important;
+  flex-flow: row nowrap;
+  align-items: center;
+  align-content: space-between;
+}
+.container-call-to-action-elements {
+  flex-grow: 1;
+  flex-basis: 80%;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 599px) {
+  .container-call-to-action-elements {
+    justify-content: flex-end;
+  }
+}
+
+/*BREAKPOINTS*/
+
+/*xs, extra-small: 0px
+sm, small: 600px
+md, medium: 900px
+lg, large: 1200px
+xl, extra-large: 1536px*/
+
+/* @media only screen and (max-width: 599px) {
+}
+/* @media only screen and (min-width: 600px) and (max-width: 899px) {
+}
+@media only screen and (min-width: 900px) and (max-width: 1199px) {
+}
+@media only screen and (min-width: 1200px) and (max-width: 1535px) {
+}
+@media only screen and (min-width: 1536px) {
+} */
 .call-to-action {
   color: #fff;
-  display: inline;
+  display: inline-block;
+  margin-right: 2rem;
+}
+@media only screen and (max-width: 599px) {
+  .call-to-action {
+    font-size: 0.5rem !important;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 899px) {
+  .call-to-action {
+    font-size: 1rem;
+  }
+}
+@media only screen and (min-width: 900px) and (max-width: 1199px) {
+  .call-to-action {
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1535px) {
+  .call-to-action {
+    font-size: 1.25rem;
+  }
 }
