--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,10 +16,10 @@ header {
     rgba(0, 49, 99, 1) 95%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#006fff",endColorstr="#003163",GradientType=1);
-  box-shadow: 0px 3px 6px #00000029;
+  box-shadow: 0px 6px 8px #00000029;
   opacity: 1;
 
-  height: 110px;
+  height: 70px;
 }
 @media only screen and (max-width: 599px) {
   header {
@@ -78,7 +78,7 @@ xl, extra-large: 1536px*/
 }
 @media only screen and (min-width: 600px) and (max-width: 899px) {
   .call-to-action {
-    font-size: 1rem;
+    font-size: .75rem;
   }
 }
 @media only screen and (min-width: 900px) and (max-width: 1199px) {
