--- a/src/styles/CallToActionCard.css
+++ b/src/styles/CallToActionCard.css
@@ -46,5 +46,5 @@
   }
 }
 .button-call-to-action-blue {
-  background-color: var(--accent-color-blue);
+  background-color: var(--primary-color700);
 }
