--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -59,7 +59,7 @@ xl, extra-large: 1536px*/
 
 /* @media only screen and (max-width: 599px) {
 }
-/* @media only screen and (min-width: 600px) and (max-width: 899px) {
+@media only screen and (min-width: 600px) and (max-width: 899px) {
 }
 @media only screen and (min-width: 900px) and (max-width: 1199px) {
 }
