section title correction ⚠️

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,6 +55,10 @@
     font-size: 1.625rem;
     font-weight: 380;
   }
+  h2.section-title {
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
   h3 {
     font-size: 1.375rem;
     font-weight: 450;
@@ -68,6 +72,10 @@
   h2 {
     font-size: 2.3rem;
     font-weight: 380;
+  }
+  h2.section-title {
+    font-size: 3.3rem;
+    font-weight: 400;
   }
   h3 {
     font-size: 1.8rem;
@@ -83,6 +91,10 @@
     font-size: 2rem;
     font-weight: 380;
   }
+  h2.section-title {
+    font-size: 3rem;
+    font-weight: 400;
+  }
   h3 {
     font-size: 1.7rem;
     font-weight: 400;
@@ -97,6 +109,10 @@
     font-size: 2rem;
     font-weight: 380;
   }
+  h2.section-title {
+    font-size: 3rem;
+    font-weight: 400;
+  }
   h3 {
     font-size: 1.7rem;
     font-weight: 400;
@@ -110,6 +126,10 @@
   h2 {
     font-size: 2rem;
     font-weight: 380;
+  }
+  h2.section-title {
+    font-size: 3rem;
+    font-weight: 400;
   }
   h3 {
     font-size: 1.7rem;
@@ -141,4 +161,8 @@ body {
 
 em {
   font-style: normal;
+}
+
+strong {
+  font-weight: 400;
 }
