--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -92,12 +92,13 @@
     font-weight: 380;
   }
   h2.section-title {
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 400;
   }
   h3 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 400;
+    line-height: 1.3;
   }
 }
 @media only screen and (min-width: 1200px) and (max-width: 1535px) {
@@ -110,12 +111,13 @@
     font-weight: 380;
   }
   h2.section-title {
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: 400;
   }
   h3 {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: 400;
+    line-height: 1.3;
   }
 }
 @media only screen and (min-width: 1536px) {
@@ -134,6 +136,7 @@
   h3 {
     font-size: 1.7rem;
     font-weight: 400;
+    line-height: 1.3;
   }
 }
 
@@ -164,5 +167,5 @@ em {
 }
 
 strong {
-  font-weight: 400;
+  font-weight: normal;
 }
