expertice area card section title adjustment ⚠️

--- a/src/styles/ExperticeAreasCard.css
+++ b/src/styles/ExperticeAreasCard.css
@@ -82,6 +82,7 @@
     width: 60%;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 2rem;
     box-sizing: border-box;
   }
 }
@@ -96,6 +97,7 @@
     width: 60%;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 2rem;
     box-sizing: border-box;
   }
 }
@@ -110,6 +112,7 @@
     width: 60%;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 2rem;
     box-sizing: border-box;
   }
 }
