--- a/src/styles/BenefitsSection.css
+++ b/src/styles/BenefitsSection.css
@@ -64,6 +64,7 @@
   width: 40%;
   opacity: 0.47;
   margin: 1rem auto 2rem auto;
+  aspect-ratio: 1/1;
 }
 @media only screen and (max-width: 599px) {
   .benefit-icon {
