--- a/src/styles/ImgMiss.css
+++ b/src/styles/ImgMiss.css
@@ -19,7 +19,7 @@ xl, extra-large: 1536px*/
 
 .ImageMiss {
   width: 100%;
-
+  max-width: 720px;
   display: block;
 }
 @media only screen and (max-width: 599px) {
