--- a/src/styles/LogoBenefits.css
+++ b/src/styles/LogoBenefits.css
@@ -8,6 +8,8 @@
   min-height: 160px;
   display: block;
   margin: 1rem auto;
+  max-width: 670px;
+  aspect-ratio: 2.128/1;
 }
 @media only screen and (max-width: 599px) {
   .logo-benefits {
